# Discord-dune-bot

./: README.md
dune_ledger_bot/: .env.example  .gitignore  Cargo.toml
dune_ledger_bot/src/: main.rs
dune_ledger_bot/src/commands/: mod.rs  request.rs  submit.rs
dune_ledger_bot/src/utils/: mod.rs  sheets.rs
