[package]
name = "dune_ledger_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12.4", features = [
  "client",
  "gateway",
  "framework",
  "standard_framework",
  "rustls_backend",
  "builder",
  "model", 
  "http",
  "unstable_discord_api"
] }
poise = "0.6.1"
tokio = { version = "1", features = [
    "macros",
    "io-util",
    "rt",
    "rt-multi-thread",
    "fs",
] }
dotenvy = "0.15"
regex = "1"
serde = "1.0.219"
serde_json = "1.0.140"
google-sheets4 = "6.0.0"
hyper = "0.14"
yup-oauth2 = "8"
hyper-util = "0.1.15"
once_cell = "1.21.3"
dashmap = "6.1.0"
chrono = "0.4.41"
uuid = { version = "1.17.0", features = ["v4"] }


